--- a/index.html
+++ b/index.html
@@ -98,6 +98,27 @@
                     <h2 class="heading">My <span>Skills</span></h2>
                 
                 <div class="services-container">
+                     <div class="services-box">
+                        <i class="bx bx-code-alt"></i>
+                            </i>
+                            <h3>Software Development</h3>
+
+                        <p > Comforatable in building complex software connecting sacalable backend and user-centric frontend
+                        </p>
+
+                    </div>
+
+                    <div class="services-box">
+                        <i class="bx bx-code-alt"></i>
+                            </i>
+                            <h3>Application Development</h3>
+
+                        <p > Cross Platform Mobile Application Development using Flutter
+                        </p>
+
+                    </div>
+
+                    
                     <div class="services-box">
                         <i class="bx bx-code-alt"></i>
                             </i>
@@ -150,7 +171,7 @@
                           <h4>Alzeihmer Monitor</h4>
                           <p>Flutter Application Development for Monitoring
 Alzheimer's Patients</p>
-                              <a href="https://github.com/shubhayushome/DoctorsApp"></i></a>
+                              <a href="https://github.com/shubhayushome/DoctorsApp"><i class="bx bx-link-external"></a>
                       </div>
                     </div>
 
@@ -162,7 +183,7 @@ Alzheimer's Patients</p>
                           <h4>Web Summarizer</h4>
                           <p>Summarizer App using API to call LLM models for
 summarization of a web page</p>
-                              <a href="https://github.com/shubhayushome/Mini-web-app"></i></a>
+                              <a href="https://github.com/shubhayushome/Mini-web-app"><i class="bx bx-link-external"></a>
                       </div>
                     </div>
 
@@ -173,7 +194,7 @@ summarization of a web page</p>
   
                           <h4>Hotel Management System</h4>
                           <p>Manage the daily operations of a hotel</p>
-                              <a href="https://github.com/shubhayushome/HotelManagementSystem"></i></a>
+                              <a href="https://github.com/shubhayushome/HotelManagementSystem"><i class="bx bx-link-external"></a>
                       </div>
                     </div>
 
@@ -186,7 +207,7 @@ summarization of a web page</p>
   
                           <h4>Predictive Analysis</h4></h4>
                           <p>Street Light Fault Prediction Project using ML models</p>
-                              <a href="https://github.com/shubhayushome/HotelManagementSystem"></i></a>
+                              <a href="https://github.com/shubhayushome/HotelManagementSystem"><i class="bx bx-link-external"></a>
                       </div>
                     </div>
 
@@ -303,3 +324,4 @@ summarization of a web page</p>
 
 
 </html>
+
